--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Starter Project for Vue with Typescript, Babel and Webpack",
   "main": "src/main.ts",
   "scripts": {
+    "start": "npm run bundle && webpack-dev-server --mode development --open",
     "bundle": "npm run build && webpack",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
@@ -40,6 +41,7 @@
     "babel-loader": "^8.0.5",
     "typescript": "^3.4.4",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   }
 }
