--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@types/node": "^11.13.5",
     "@types/webpack": "^4.4.27",
     "babel-loader": "^8.0.5",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "typescript": "^3.4.4",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
