--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
     "@types/node": "^11.13.5",
     "@types/webpack": "^4.4.27",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "typescript": "^3.4.4",
     "vue": "^2.6.10",
     "vue-property-decorator": "^8.1.0",
