--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "css-loader": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
     "typescript": "^3.4.4",
     "vue": "^2.6.10",
     "vue-property-decorator": "^8.1.0",
