--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Starter Project for Vue with Typescript, Babel and Webpack",
   "main": "src/main.ts",
   "scripts": {
-    "start": "npm run bundle && webpack-dev-server --mode development --open",
+    "start": "npm run bundle-dev && webpack-dev-server --env.development --open",
+    "bundle-dev": "npm run build-dev && webpack --env.development",
     "bundle": "npm run build && webpack",
+    "build-dev": "npm run build-types && npm run babel-dev",
+    "build": "npm run build-types && npm run babel",
+    "babel-dev": "babel src --out-dir lib --extensions \".ts\" --source-maps both",
+    "babel": "babel src --out-dir lib --extensions \".ts\"",
+    "build-types": "tsc --emitDeclarationOnly",
     "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch",
-    "build": "npm run build:types && npm run build:js",
-    "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
+    "type-check:watch": "npm run type-check -- --watch"
   },
   "repository": {
     "type": "git",
@@ -46,7 +49,9 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
+    "terser-webpack-plugin": "^1.2.3",
     "typescript": "^3.4.4",
     "vue": "^2.6.10",
     "vue-property-decorator": "^8.1.0",
