--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "css-loader": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
     "jest-cli": "^24.7.1",
     "mini-css-extract-plugin": "^0.6.0",
