--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "npm run type-check && babel src --out-dir lib --extensions \".ts\" --delete-dir-on-start",
     "build-types": "tsc --emitDeclarationOnly",
     "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch"
+    "type-check:watch": "npm run type-check -- --watch",
+    "test": "npm run build-dev && babel test/unit/specs --out-dir test/unit/specs --extensions \".ts\" && karma start --single-run"
   },
   "repository": {
     "type": "git",
@@ -39,13 +40,25 @@
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.7",
     "@types/webpack": "^4.4.27",
     "babel-loader": "^8.0.5",
+    "babelify": "^10.0.0",
+    "browserify": "^16.2.3",
+    "chai": "^4.2.0",
     "css-loader": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "karma": "^4.1.0",
+    "karma-babel-preprocessor": "^8.0.0-beta.0",
+    "karma-browserify": "^6.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-webpack": "^3.0.5",
     "mini-css-extract-plugin": "^0.6.0",
+    "mocha": "^6.1.4",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
@@ -55,6 +68,7 @@
     "vue-property-decorator": "^8.1.0",
     "vue-template-compiler": "^2.6.10",
     "vue-template-loader": "^1.0.0",
+    "watchify": "^3.11.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
