--- a/package.json
+++ b/package.json
@@ -48,18 +48,15 @@
     "@types/node": "^11.13.7",
     "@types/webpack": "^4.4.27",
     "babel-loader": "^8.0.5",
-    "babelify": "^10.0.0",
-    "browserify": "^16.2.3",
     "chai": "^4.2.0",
     "css-loader": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "karma": "^4.1.0",
     "karma-babel-preprocessor": "^8.0.0-beta.0",
-    "karma-browserify": "^6.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
-    "karma-webpack": "^3.0.5",
+    "karma-webpack": "3.0.0",
     "mini-css-extract-plugin": "^0.6.0",
     "mocha": "^6.1.4",
     "node-sass": "^4.11.0",
@@ -68,10 +65,10 @@
     "terser-webpack-plugin": "^1.2.3",
     "typescript": "^3.4.5",
     "vue": "^2.6.10",
+    "vue-devtools": "^5.0.0-beta.1",
     "vue-property-decorator": "^8.1.0",
     "vue-template-compiler": "^2.6.10",
     "vue-template-loader": "^1.0.0",
-    "watchify": "^3.11.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
