--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "test": "karma start --single-run",
-    "pretest": "npm run build-dev && babel test/unit/specs --out-dir test/lib/specs --extensions \".ts\"",
+    "pretest": "npm run build-dev && babel test/unit/specs --out-dir test/lib/specs --extensions \".ts\" --source-maps both",
     "test:watch": "karma start",
-    "pretest:watch": "npm run build-dev && babel test/unit/specs --out-dir test/lib/specs --extensions \".ts\""
+    "pretest:watch": "npm run build-dev && babel test/unit/specs --out-dir test/lib/specs --extensions \".ts\" --source-maps both"
   },
   "repository": {
     "type": "git",
@@ -65,7 +65,6 @@
     "terser-webpack-plugin": "^1.2.3",
     "typescript": "^3.4.5",
     "vue": "^2.6.10",
-    "vue-devtools": "^5.0.0-beta.1",
     "vue-property-decorator": "^8.1.0",
     "vue-template-compiler": "^2.6.10",
     "vue-template-loader": "^1.0.0",
